<resources>
    <string name="app_name">Note App</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">pick color</string>
    <string name="note_title">Note Title</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="edit_link">Edit Link</string>
    <string name="change_image">Change Image</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_the_note">Are you sure, you want to delete the note?</string>
</resources>