<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".ui.CreateNoteActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

                <ImageView
                    android:id="@+id/imageBack"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_back" />

                <ImageView
                    android:id="@+id/imageSave"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@drawable/background_done_button"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_4sdp"
                    app:layout_constraintTop_toTopOf="@id/imageBack"
                    app:layout_constraintBottom_toBottomOf="@id/imageBack"
                    app:layout_constraintRight_toRightOf="parent"
                    android:src="@drawable/ic_done" />

            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/colorHintText"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@+id/imageSave"
                tools:layout_editor_absoluteX="16dp" />
            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"
                />

            <EditText
                android:id="@+id/inputNoteSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/colorTextSubtitle"
                android:textColorHint="@color/colorHintText"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/viewSubtitleIndicator"
                app:layout_constraintTop_toBottomOf="@id/textDateTime"
                />
            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/inputNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputNoteSubtitle"/>
            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                app:layout_constraintTop_toBottomOf="@id/inputNoteSubtitle"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imageRemoveImage"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_delete"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                app:tint="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/imageNote"
                app:layout_constraintTop_toTopOf="@id/imageNote"/>
            <LinearLayout
                android:id="@+id/layoutWebURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12ssp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/imageNote"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/textWebURL"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_13ssp"/>

                <ImageView
                    android:id="@+id/imageRemoveWebUrl"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/colorDelete" />

            </LinearLayout>

            <EditText
                android:id="@+id/inputNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorHintText"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutWebURL"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/layoutMisc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMiscBackground"
        android:orientation="vertical"
        app:behavior_peekHeight="@dimen/_40sdp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:id="@+id/textMisc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/miscellaneous"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <LinearLayout
            android:id="@+id/layoutNoteColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewColor1"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_1" />

                <ImageView
                    android:id="@+id/imageColor1"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_done"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewColor2"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_2" />

                <ImageView
                    android:id="@+id/imageColor2"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewColor3"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_3" />

                <ImageView
                    android:id="@+id/imageColor3"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewColor4"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_4" />

                <ImageView
                    android:id="@+id/imageColor4"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewColor5"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_5" />

                <ImageView
                    android:id="@+id/imageColor5"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/white" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:includeFontPadding="false"
                android:text="@string/pick_color"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        <LinearLayout
                android:id="@+id/layoutAddImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_image"
                app:tint="@color/colorIcons" />
            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/ubuntu_medium"
                android:includeFontPadding="false"
                android:text="@string/add_image"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_12ssp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutAddUrl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_language"
                app:tint="@color/colorIcons" />
            <TextView
                android:id="@+id/textAddLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/add_url"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_12ssp"/>
        </LinearLayout>


        </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>